# ms-graph-example

./: pyproject.toml
src/ms_graph_test/: main.py
